[package]
name = "hm305p"
version = "0.3.0"
authors = ["becky <8b2@protonmail.com>"]
description = "Driver for the HANMATEK HM305P DC Power Supply"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.0"
thiserror = "1.0"
