[package]
name = "hm305p"
version = "1.2.1"
edition = "2021"
description = "Driver for the HANMATEK HM305P DC Power Supply"
repository = "https://github.com/becky112358/hm305p"
license = "MIT"
keywords = ["power-supply"]
categories = ["hardware-support"]

[dependencies]
serialport = "4.0.0"
thiserror = "1.0"
